2009-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Autoload w3m-go-to-linknum.
	(w3m-lynx-like-map, w3m-info-like-map): Bind `C-c C-l' to it.
	(w3m-mode): Mention w3m-go-to-linknum in doc string.

	* w3m-util.el (w3m-read-number): New function.

	* w3m-lnum.el (w3m-go-to-linknum): Use w3m-read-number.

2008-04-12  Jose A. Ortega Ruiz  <jao@gnu.org>

	* w3m-lnum.el (w3m-go-to-linknum): New function.

2009-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-ignore-errors): New macro.
	(w3m-session-save, w3m-session-automatic-save)
	(w3m-session-deleted-save, w3m-session-crash-recovery-save)
	(w3m-session-crash-recovery-remove, w3m-session-select-mode)
	(w3m-session-select, w3m-session-make-menu-items)
	(w3m-session-last-autosave-session, w3m-session-last-crashed-session):
	Use it.

	(toplevel): Require cl when compiling.
	(w3m-session-crash-recovery-save)
	(w3m-session-select-list-all-sessions): Remove unused variables.

2009-02-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-session.el (w3m-session-last-crashed-session): Fix tiny typo.

2009-02-15  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-idle-images-show): If detect deleted buffer, unqueue
	processes related to the buffer.

	* w3m-session.el (w3m-session-crash-recovery): Change the default to t.

2009-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-buffer-setup): Add keymap that cycles buffers as usual to
	mode-line-buffer-identification.

2009-02-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bookmark.el (w3m-bookmark-view, w3m-bookmark-view-new-session)
	(w3m-bookmark-make-menu-items): Check if bookmark file exists.

2009-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-insert): Don't decode url containing
	non-ASCII characters already.  e.g. about://weather/WHERE

2009-02-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Remove a wrong set-buffer().

2009-02-03  Katsumi Yamaoka  <yamaoka@jpl.org>
